--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,7 @@ jobs:
           /k:"Yarickprogramist_NetSdrClient" `
           /o:"yarickprogramist" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="**/coverage.xml" `
+          /d:sonar.cs.opencover.reportsPaths="NetSdrClientAppTests/TestResults/coverage.xml;EchoServerTests/TestResults/coverage.xml" `
           /d:sonar.cpd.cs.minimumTokens=40 `
           /d:sonar.cpd.cs.minimumLines=5 `
           /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
@@ -72,9 +72,14 @@ jobs:
         run: dotnet build NetSdrClient.sln -c Release --no-restore
       - name: Tests with coverage (OpenCover)
         run: |
-          dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release --no-build `
+          dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=TestResults/coverage.xml `
+            /p:CoverletOutput=NetSdrClientAppTests/TestResults/coverage.xml `
+            /p:CoverletOutputFormat=opencover
+    
+          dotnet test EchoServerTests/EchoServerTests.csproj -c Release `
+            /p:CollectCoverage=true `
+            /p:CoverletOutput=EchoServerTests/TestResults/coverage.xml `
             /p:CoverletOutputFormat=opencover
         shell: pwsh
       # 3) END: SonarScanner
