--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -70,6 +70,12 @@ jobs:
         run: dotnet restore NetSdrClient.sln
       - name: Build
         run: dotnet build NetSdrClient.sln -c Release --no-restore
+
+      - name: Prepare TestResults folders
+        run: |
+          New-Item -ItemType Directory -Force -Path NetSdrClientAppTests/TestResults
+          New-Item -ItemType Directory -Force -Path EchoServerTests/TestResults
+        shell: pwsh
       - name: Tests with coverage (OpenCover)
         run: |
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release `
