--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -3,29 +3,6 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-# This workflow helps you trigger a SonarCloud analysis of your code and populates
-# GitHub Code Scanning alerts with the vulnerabilities found.
-# Free for open source project.
-
-# 1. Login to SonarCloud.io using your GitHub account
-
-# 2. Import your project on SonarCloud
-#     * Add your GitHub organization first, then add your repository as a new project.
-#     * Please note that many languages are eligible for automatic analysis,
-#       which means that the analysis will start automatically without the need to set up GitHub Actions.
-#     * This behavior can be changed in Administration > Analysis Method.
-#
-# 3. Follow the SonarCloud in-product tutorial
-#     * a. Copy/paste the Project Key and the Organization Key into the args parameter below
-#          (You'll find this information in SonarCloud. Click on "Information" at the bottom left)
-#
-#     * b. Generate a new token and add it to your Github repository's secrets using the name SONAR_TOKEN
-#          (On SonarCloud, click on your avatar on top-right > My account > Security
-#           or go directly to https://sonarcloud.io/account/security/)
-
-# Feel free to take a look at our documentation (https://docs.sonarcloud.io/getting-started/github/)
-# or reach out to our community forum if you need some help (https://community.sonarsource.com/c/help/sc/9)
-
 name: SonarCloud analysis
 
 on:
@@ -41,7 +18,7 @@ permissions:
 jobs:
   sonar-check:
     name: Sonar Check
-    runs-on: windows-latest   # безпечно для будь-яких .NET проектів
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
@@ -59,12 +36,13 @@ jobs:
           /k:"Yarickprogramist_NetSdrClient" `
           /o:"yarickprogramist" `
           /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-          /d:sonar.cs.opencover.reportsPaths="NetSdrClientAppTests/TestResults/coverage.xml;EchoServerTests/TestResults/coverage.xml" `
+          /d:sonar.cs.opencover.reportsPaths="NetSdrClientAppTests\TestResults\coverage.xml;EchoServerTests\TestResults\coverage.xml" `
           /d:sonar.cpd.cs.minimumTokens=40 `
           /d:sonar.cpd.cs.minimumLines=5 `
           /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
           /d:sonar.qualitygate.wait=true
         shell: pwsh
+
       # 2) BUILD & TEST
       - name: Restore
         run: dotnet restore NetSdrClient.sln
@@ -73,21 +51,31 @@ jobs:
 
       - name: Prepare TestResults folders
         run: |
-          New-Item -ItemType Directory -Force -Path NetSdrClientAppTests/TestResults
-          New-Item -ItemType Directory -Force -Path EchoServerTests/TestResults
+          New-Item -ItemType Directory -Force -Path NetSdrClientAppTests\TestResults
+          New-Item -ItemType Directory -Force -Path EchoServerTests\TestResults
         shell: pwsh
+
       - name: Tests with coverage (OpenCover)
         run: |
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=NetSdrClientAppTests/TestResults/coverage.xml `
+            /p:CoverletOutput=NetSdrClientAppTests\TestResults\coverage.xml `
             /p:CoverletOutputFormat=opencover
-    
+
           dotnet test EchoServerTests/EchoServerTests.csproj -c Release `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=EchoServerTests/TestResults/coverage.xml `
+            /p:CoverletOutput=EchoServerTests\TestResults\coverage.xml `
             /p:CoverletOutputFormat=opencover
         shell: pwsh
+
+      - name: Check coverage files
+        run: |
+          Write-Host "NetSdrClientAppTests coverage file:"
+          Get-ChildItem -Recurse NetSdrClientAppTests\TestResults
+          Write-Host "EchoServerTests coverage file:"
+          Get-ChildItem -Recurse EchoServerTests\TestResults
+        shell: pwsh
+
       # 3) END: SonarScanner
       - name: SonarScanner End
         run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
