Update SonarCloud workflow configuration
Refactor SonarCloud workflow for improved clarity and coverage reporting.

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: SonarCloud analysis
 
 on:
@@ -13,91 +8,86 @@ on:
   workflow_dispatch:
 
 permissions:
-  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
+  pull-requests: read
 
 jobs:
   sonar-check:
     name: Sonar Check
     runs-on: windows-latest
     steps:
-      # 1) Checkout code
+      # Checkout
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2) Setup .NET
+      # Setup .NET
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      # 3) SonarScanner Begin
-      - name: SonarScanner Begin
+      # Install SonarScanner
+      - name: Install SonarScanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
           echo "$env:USERPROFILE\.dotnet\tools" >> $env:GITHUB_PATH
+        shell: pwsh
+
+      # Install ReportGenerator
+      - name: Install ReportGenerator
+        run: dotnet tool install -g dotnet-reportgenerator-globaltool
+        shell: pwsh
+
+      # SonarScanner Begin
+      - name: SonarScanner Begin
+        run: |
           dotnet sonarscanner begin `
             /k:"Yarickprogramist_NetSdrClient" `
             /o:"yarickprogramist" `
             /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-            /d:sonar.cs.opencover.reportsPaths="CoverageMerged/Summary.xml" `
-            /d:sonar.cpd.cs.minimumTokens=40 `
-            /d:sonar.cpd.cs.minimumLines=5 `
+            /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml" `
             /d:sonar.exclusions=**/bin/**,**/obj/**,**/sonarcloud.yml `
             /d:sonar.qualitygate.wait=true
         shell: pwsh
 
-      # 4) Restore & Build
+      # Restore & Build
       - name: Restore
         run: dotnet restore NetSdrClient.sln
       - name: Build
         run: dotnet build NetSdrClient.sln -c Release --no-restore
 
-      # 5) Prepare TestResults folders
+      # Prepare coverage folders
       - name: Prepare TestResults folders
         run: |
-          New-Item -ItemType Directory -Force -Path NetSdrClientAppTests/TestResults
-          New-Item -ItemType Directory -Force -Path EchoServerTests/TestResults
+          New-Item -ItemType Directory -Force -Path NetSdrClientAppTests\TestResults
+          New-Item -ItemType Directory -Force -Path EchoServerTests\TestResults
         shell: pwsh
 
-      # 6) Run tests with coverage
-      - name: Tests with coverage (OpenCover)
+      # Run tests with coverage
+      - name: Run Tests with Coverlet
         run: |
           dotnet test NetSdrClientAppTests/NetSdrClientAppTests.csproj -c Release `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=NetSdrClientAppTests/TestResults/coverage.xml `
-            /p:CoverletOutputFormat=opencover
+            /p:CoverletOutputFormat=opencover `
+            /p:CoverletOutput=NetSdrClientAppTests/TestResults/coverage1.xml
 
           dotnet test EchoServerTests/EchoServerTests.csproj -c Release `
             /p:CollectCoverage=true `
-            /p:CoverletOutput=EchoServerTests/TestResults/coverage.xml `
-            /p:CoverletOutputFormat=opencover
+            /p:CoverletOutputFormat=opencover `
+            /p:CoverletOutput=EchoServerTests/TestResults/coverage2.xml
         shell: pwsh
 
-      # 7) Verify coverage files
-      - name: Check TestResults folders
+      # Merge coverage reports
+      - name: Merge Coverage Reports
         run: |
-          Write-Host "NetSdrClientAppTests coverage files:"
-          Get-ChildItem -Recurse NetSdrClientAppTests/TestResults
-          Write-Host "EchoServerTests coverage files:"
-          Get-ChildItem -Recurse EchoServerTests/TestResults
+          reportgenerator `
+            -reports:NetSdrClientAppTests/TestResults/coverage1.xml;EchoServerTests/TestResults/coverage2.xml `
+            -targetdir:CoverageMerged `
+            -reporttypes:Xml
+          
+          if (-Not (Test-Path CoverageMerged/coverage.xml)) { Write-Error "Coverage files are missing!" }
         shell: pwsh
 
-      # 8) Merge coverage reports
-      - name: Merge coverage reports
-        run: |
-          dotnet tool install -g dotnet-reportgenerator-globaltool
-          $reports = @(
-            "NetSdrClientAppTests/TestResults/coverage.xml",
-            "EchoServerTests/TestResults/coverage.xml"
-          )
-          if ($reports | ForEach-Object { Test-Path $_ } | Where-Object { $_ -eq $false }) {
-            Write-Error "Coverage files are missing!"
-            exit 1
-          }
-          reportgenerator "-reports:$($reports -join ';')" "-targetdir:CoverageMerged" -reporttypes:Xml
-        shell: pwsh
-
-      # 9) SonarScanner End
+      # SonarScanner End
       - name: SonarScanner End
         run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
         shell: pwsh
